# pdtree

./: .cproject  .gitignore  .project  .ycm_extra_conf.py  Branching.cpp  Branching.hpp  Dataset.cpp  Dataset.hpp  FeatureBranching.cpp  FeatureBranching.hpp  Greedy.cpp  Greedy.hpp  Instance.cpp  Instance.hpp  InstanceSet.cpp  InstanceSet.hpp  LICENSE  MIPMultiVariate.cpp  MIPMultiVariate.hpp  MIPPDtree.cpp  MIPPDtree.hpp  MIPSelAlg.cpp  MIPSelAlg.hpp  Makefile.am  Node.cpp  Node.hpp  Parameters.cpp  Parameters.hpp  README.md  ResTestSet.cpp  ResTestSet.hpp  Results.cpp  Results.hpp  ResultsSet.cpp  ResultsSet.hpp  SubSetResults.cpp  SubSetResults.hpp  Tree.cpp  Tree.hpp  autogen.sh  (+17 more)
.kdev4/: pdtree.kdev4
bench/: bench.sh
test/: features-norm.csv  features-rnorm.csv  filter-mip.py  filter-rcpsp.py  filter.py  incparams-mip.csv  incparams-rcpsp.csv  mip-features.csv  mip-results.csv  rcpsp-features.csv  rcpsp-results.csv  relaxation.csv  results.csv  tiny-feat-5-3.csv  tiny-res-5-3.csv
